3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

server/apply.c: Fix bug in that cursed weapons were not equipped/
   unequipped.
MSW 2003-02-11

doc/Developers/objects: Add nodes about shared strings in objects.
server/c_misc.c: Remove check for name length - check_name takes care
    of that for us.
server/monster.c: store return value from get_map_flags - seen some
    crashes traced back to this area, want to see what it returned.
    Allow objects with no msg to still use scripts that listen.
server/player.c: Fix potentional issue of freeing/adding players name
    when they enter play again - seen some crashes attributed to 
    odd names.
MSW 2003-02-08


More bugfixes:
server/player.c: Fix permadeath without resurrection - wasn't deleting
    player save files as it was supposed to.  If permadeath +
    resurrection was in use, I believe it all worked as expected.
include/shop.h: remove _SHOP_H after endif, causing compiler warnings.
include/skills.h: Add check to USING_SKILL to make sure chosen_skill
   is not null.
server/c_chat.c: Add some missing return values, resulting in compiler
   warnings.
server/skill_util.c: Remove unused variable.  compiler warnings again.
server/spell_effect.c: Change dimension door so that you can't go
   through spaces that block passsage and also block view (eg walls).
   This goes back to the more traditional behaviour.  Remove
   some unused variables.
server/spell_util.c: Add missing P_OUT_OF_MAP to move_missile, resulting
   in crashes.
server/time.c: if generator is not on a map, don't have it generates.
   Fixes crashes.
MSW 2003-02-02

New materialtype system for crossfire.  Based in concept on my original